--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
 CC := gcc
 CFLAGS_DEBUG = -g -O0 -Wall -Wextra -DDEBUG -DHTTP_USE_MEMMEM
-CFLAGS_RELEASE = -O2 -Wall -Wextra -DNDEBUG -DHTTP_USE_MEMMEM
+CFLAGS_RELEASE = -O2 -Wall -Wextra -Werror -DNDEBUG -DHTTP_USE_MEMMEM
 
 TARGET := server
 
-SRC := main.c server.c utils.c epoll_utils.c connection.c http_parser.c http_response.c timer.c
+SRC := main.c server.c utils.c epoll_utils.c connection.c http_parser.c http_response.c timer.c shutdown.c
 
 BUILD ?= release
 
