add test.sh to automate server build, run, and cleanup

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,11 @@
+LIB_DIR := ../lib
 CC := gcc
-CFLAGS_DEBUG = -g -O0 -Wall -Wextra -DDEBUG -DHTTP_USE_MEMMEM
-CFLAGS_RELEASE = -O2 -Wall -Wextra -Werror -DNDEBUG -DHTTP_USE_MEMMEM
+CFLAGS_DEBUG = -g -O0 -Wall -Wextra -DDEBUG -DHTTP_USE_MEMMEM -I$(LIB_DIR)
+CFLAGS_RELEASE = -O2 -Wall -Wextra -Werror -DNDEBUG -DHTTP_USE_MEMMEM -I$(LIB_DIR)
 
 TARGET := server
 
-SRC := main.c server.c utils.c epoll_utils.c connection.c http_parser.c http_response.c timer.c shutdown.c
+SRC := test.c $(wildcard $(LIB_DIR)/*.c)
 
 BUILD ?= release
 
